--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: Freethinker Indonesia
   **Hydejack** is your presence on the web, featuring a blog, portfolio, and resume.
 
 # A shorter description for the sidebar.
-tagline: @BayuAngora 
+tagline: Bayu Angora 
   Open `_config.yml` to edit this text.
 
 # A list of keywords for your blog
