--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ description: Freethinker Indonesia
   **Hydejack** is your presence on the web, featuring a blog, portfolio, and resume.
 
 # A shorter description for the sidebar.
-tagline: Bayu Angora 
-  Open `_config.yml` to edit this text.
+tagline: ★★★★★
 
 # A list of keywords for your blog
 keywords: []
@@ -49,7 +48,6 @@ author:
 
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright: All Rights Reserved © Bayu Angora
-  Open `_config.yml` to edit this text.
 
 # Add links to the footer.
 # Typically you'll want to link to your impress, cookies or privacy policy, etc.
