--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,7 @@ hydejack:
   no_push_state: false
 
   # Set to `true` if you want to disable the drawer
-  no_drawer: false
+  no_drawer: true
 
   # Set to `true` to prevent usage of `hy-img` (lazy-loading images).
   no_img: true
@@ -180,12 +180,12 @@ hydejack:
   cookies_banner: false
 
   # Set to `true` if you would like to add a "Powered by Hydejack" link in the footer.
-  advertise: false
+  advertise: true
 
   # Note that dark mode only works in the PRO version of Hydejack.
   dark_mode:
     # Set to `true` to always use the dark theme.
-    always: false
+    always: trye
 
     # Set to `true` to use the dark theme based on visitors' local time.
     dynamic: true
@@ -200,7 +200,7 @@ hydejack:
   # This is an _experimental_ feature.
   # Only use if you know what Service Workers are and how they can impact your site!
   offline:
-    enabled: false
+    enabled: true
     cache_version: 1
 
 # Collections
