--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,7 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name: Bayu Angora
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -33,12 +32,10 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
-    # email:           <mail@domain.tld>
-    # rss:             https://<url>/feed.xml
-    # facebook:        <username>
-    # google:          <number>
+    facebook: BayuAngora
+    twitter: BayuAngora
+    google-plus: BayuAngora
+    instagram: BayuAngora
     # vk:              <username>
     # youtube:         <string_string_string>
     # vimeo:           <username>
@@ -46,7 +43,6 @@ author1:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    # instagram:       <username>
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
@@ -83,8 +79,10 @@ author2:
 
     Open `_data/authors.yml` to edit this text.
   picture:           https://placehold.it/128x128
-  twitter:           <username>
-  github:            <username>
+  facebook: BayuAngora
+  twitter: BayuAngora
+  google-plus: BayuAngora 
+  instagram: BayuAngora
   accent_color:      '#268bd2'
   accent_image:
     background:      '#202020'
